# onemile

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/login/: page.tsx
client/src/components/: OneButton.tsx  OneInput.tsx  site-headers.tsx
client/src/components/auth/: login-card.tsx  login-form.tsx
client/src/components/icons/: GoogleIcon.tsx
scripts/: entrypoint.sh
server/: .env.example  .gitignore
server/auth_app/: enums.py  models.py
server/auth_app/migrations/: 0001_initial.py
server/backend/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
server/backend/settings/templates/: settings.dev.py
server/core/utils/: collections.py  misc.py  settings.py
server/local/: settings.dev.py
server/server/: settings.py
