[project]
name = "onemile"
version = "0.1.0"
description = "ai personal investment advisor"
authors = [
    {name = "mrkirthi-24",email = "kirthibagrecha4@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "social-auth-app-django (>=5.4.3,<6.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[tool.isort]
multi_line_output = 5
line_length = 119
